--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -41,7 +41,17 @@ stages:
 
     # - script: export ANSIBLE_HOST_KEY_CHECKING=False ""
       
-
+    - task: DeleteFiles@1
+      displayName: Delete non artifact files
+      inputs:
+        SourceFolder: 'bootcamp-app'
+        Contents: |
+          README.md
+          .git
+          docs
+          .gitignore
+          LICENSE
+          
     - task: ArchiveFiles@2
       displayName: 'Archive files'
       inputs:
