Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -51,6 +51,7 @@ stages:
           docs
           .gitignore
           LICENSE
+          azure-pipelines.yml
           
     - task: ArchiveFiles@2
       displayName: 'Archive files'
