Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -69,8 +69,13 @@ stages:
         artifactType: 'pipeline'
         parallel: false
 
-    script    
-        
+    - task: Ansible@0
+      displayName: Add agents to all machines
+      inputs:
+        ansibleInterface: 'agentMachine'
+        playbookPathOnAgentMachine: 'Weight-tracker-ansible-pipeline/add-stage-to-pipeline.yaml'
+        inventoriesAgentMachine: 'noInventory'
+        args: '-e "env=stage admin_password=4568"'
 
 
 # - stage: CD_stage
