--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -36,11 +36,12 @@ stages:
     steps:
     - checkout: self
     - checkout: Weight-tracker-ansible-pipeline
-    - task: Npm@0
-      displayName: 'npm install'
-      inputs:
-        cwd: 'bootcamp-app'
-        command: 'install'
+
+    # - task: Npm@0
+    #   displayName: 'npm install'
+    #   inputs:
+    #     cwd: 'bootcamp-app'
+    #     command: 'install'
 
     # - script: export ANSIBLE_HOST_KEY_CHECKING=False ""
       
