--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -45,33 +45,33 @@ stages:
 
     # - script: export ANSIBLE_HOST_KEY_CHECKING=False ""
       
-    - task: DeleteFiles@1
-      displayName: Delete non artifact files
-      inputs:
-        SourceFolder: 'bootcamp-app'
-        Contents: |
-          README.md
-          .git
-          docs
-          .gitignore
-          LICENSE
-          azure-pipelines.yml
+    # - task: DeleteFiles@1
+    #   displayName: Delete non artifact files
+    #   inputs:
+    #     SourceFolder: 'bootcamp-app'
+    #     Contents: |
+    #       README.md
+    #       .git
+    #       docs
+    #       .gitignore
+    #       LICENSE
+    #       azure-pipelines.yml
           
-    - task: ArchiveFiles@2
-      displayName: 'Archive files'
-      inputs:
-        rootFolderOrFile: '$(System.DefaultWorkingDirectory)/bootcamp-app'
-        includeRootFolder: false
-        archiveType: zip
-        archiveFile: $(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip
-        replaceExistingArchive: true
+    # - task: ArchiveFiles@2
+    #   displayName: 'Archive files'
+    #   inputs:
+    #     rootFolderOrFile: '$(System.DefaultWorkingDirectory)/bootcamp-app'
+    #     includeRootFolder: false
+    #     archiveType: zip
+    #     archiveFile: $(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip
+    #     replaceExistingArchive: true
 
-    - task: PublishPipelineArtifact@1
-      inputs:
-        targetPath: '$(Pipeline.Workspace)'
-        artifactName: 'drop'
-        artifactType: 'pipeline'
-        parallel: false
+    # - task: PublishPipelineArtifact@1
+    #   inputs:
+    #     targetPath: '$(Pipeline.Workspace)'
+    #     artifactName: 'drop'
+    #     artifactType: 'pipeline'
+    #     parallel: false
 
     - task: Ansible@0
       displayName: Add agents to all machines
