--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -34,52 +34,62 @@ stages:
     displayName: Build
 
     steps:
-    # - checkout: self
+    - checkout: self
     - checkout: Weight-tracker-ansible-pipeline
 
-    # - task: Npm@0
-    #   displayName: 'npm install'
-    #   inputs:
-    #     cwd: 'bootcamp-app'
-    #     command: 'install'
+    - task: Npm@0
+      displayName: 'npm install'
+      inputs:
+        cwd: 'bootcamp-app'
+        command: 'install'
 
     # - script: export ANSIBLE_HOST_KEY_CHECKING=False ""
       
-    # - task: DeleteFiles@1
-    #   displayName: Delete non artifact files
-    #   inputs:
-    #     SourceFolder: 'bootcamp-app'
-    #     Contents: |
-    #       README.md
-    #       .git
-    #       docs
-    #       .gitignore
-    #       LICENSE
-    #       azure-pipelines.yml
-          
-    # - task: ArchiveFiles@2
-    #   displayName: 'Archive files'
-    #   inputs:
-    #     rootFolderOrFile: '$(System.DefaultWorkingDirectory)/bootcamp-app'
-    #     includeRootFolder: false
-    #     archiveType: zip
-    #     archiveFile: $(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip
-    #     replaceExistingArchive: true
-
-    # - task: PublishPipelineArtifact@1
-    #   inputs:
-    #     targetPath: '$(Pipeline.Workspace)'
-    #     artifactName: 'drop'
-    #     artifactType: 'pipeline'
-    #     parallel: false
-
-    - task: Ansible@0
-      displayName: Add agents to all machines
+    - task: DeleteFiles@1
+      displayName: Delete non artifact files
       inputs:
-        ansibleInterface: 'agentMachine'
-        playbookPathOnAgentMachine: 'add-stage-to-pipeline.yaml'
-        inventoriesAgentMachine: 'noInventory'
-        args: '-e "env=stage admin_password=$(VM-password)"'
+        SourceFolder: 'bootcamp-app'
+        Contents: |
+          README.md
+          .git
+          docs
+          .gitignore
+          LICENSE
+          azure-pipelines.yml
+          
+    - task: ArchiveFiles@2
+      displayName: 'Archive files'
+      inputs:
+        rootFolderOrFile: '$(System.DefaultWorkingDirectory)/bootcamp-app'
+        includeRootFolder: false
+        archiveType: zip
+        archiveFile: $(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip
+        replaceExistingArchive: true
+
+    - task: PublishPipelineArtifact@1
+      inputs:
+        targetPath: '$(Pipeline.Workspace)'
+        artifactName: 'drop'
+        artifactType: 'pipeline'
+        parallel: false
+
+    # - task: Ansible@0
+    #   displayName: Add agents to all machines
+    #   inputs:
+    #     ansibleInterface: 'agentMachine'
+    #     playbookPathOnAgentMachine: 'add-stage-to-pipeline.yaml'
+    #     inventoriesAgentMachine: 'noInventory'
+    #     args: '-e "env=stage admin_password=$(VM-password)"'
+
+    - task: UniversalPackages@0
+      inputs:
+        command: 'publish'
+        publishDirectory: '$(Build.ArtifactStagingDirectory)'
+        feedsToUsePublish: 'internal'
+        vstsFeedPublish: '4d568cd9-3258-4c66-8828-30f40b885ad4/fa3b70db-aad3-42de-a3b2-a6d319553542'
+        vstsFeedPackagePublish: 'weightTracker'
+        versionOption: 'patch'
+
 
 
 # - stage: CD_stage
