--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -92,39 +92,57 @@ stages:
 
 
 
-# - stage: CD_stage
-#   displayName: Stage
+- stage: CD_stage
+  displayName: Stage
   
-#   variables: 
-#   - group: vault secrets - stage
+  variables: 
+  - group: vault secrets - stage
 
-#   jobs:
-#   - job: Build
-#     displayName: Build
-
+  jobs:
+  - job: Build
 
 
-    # - script: |
-    #     echo "
-    #     PORT=8080
-    #     HOST=0.0.0.0
 
-    #     #postgres
-    #     PGHOST=${PGHOST}
-    #     PGUSERNAME=postgres
-    #     PGDATABASE=postgres
-    #     PGPASSWORD=${PGPASSWORD}
-    #     PGPORT=5432
 
-    #     HOST_URL=http://${HOST_URL_IP}:8080
-    #     COOKIE_ENCRYPT_PWD=${COOKIE_ENCRYPT_PWD}
-    #     NODE_ENV=development
+  - deployment: Build
+    displayName: Build
+    dependsOn: CI
+    environment: stage
+    strategy:
+      rolling:
+        deploy:
+          steps:
+          - task: UniversalPackages@0
+            inputs:
+              command: 'download'
+              downloadDirectory: '$(System.DefaultWorkingDirectory)'
+              feedsToUse: 'internal'
+              vstsFeed: '4d568cd9-3258-4c66-8828-30f40b885ad4/fa3b70db-aad3-42de-a3b2-a6d319553542'
+              vstsFeedPackage: 'abb22cc3-69e3-448e-bcb0-4091eee52c00'
+              vstsPackageVersion: '0.0.1'
+  
 
-    #     # Okta configuration
-    #     OKTA_ORG_URL=https://dev-77800982.okta.com
-    #     OKTA_CLIENT_ID=${OKTA-client-ID}
-    #     OKTA_CLIENT_SECRET=${OKTA_CLIENT_SECRET}" | cat > .env
-    #   displayName: '.Env creation'
+            # - script: |
+            #     echo "
+            #     PORT=8080
+            #     HOST=0.0.0.0
+
+            #     #postgres
+            #     PGHOST=${PGHOST}
+            #     PGUSERNAME=postgres
+            #     PGDATABASE=postgres
+            #     PGPASSWORD=${PGPASSWORD}
+            #     PGPORT=5432
+
+            #     HOST_URL=http://${HOST_URL_IP}:8080
+            #     COOKIE_ENCRYPT_PWD=${COOKIE_ENCRYPT_PWD}
+            #     NODE_ENV=development
+
+            #     # Okta configuration
+            #     OKTA_ORG_URL=https://dev-77800982.okta.com
+            #     OKTA_CLIENT_ID=${OKTA-client-ID}
+            #     OKTA_CLIENT_SECRET=${OKTA_CLIENT_SECRET}" | cat > .env
+            #   displayName: '.Env creation'
 
 
 
