--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -104,17 +104,23 @@ stages:
     displayName: Deploy stage
     environment: stage
     strategy:
-      rolling:
+      runOnce:
         deploy:
           steps:
-          - task: UniversalPackages@0
-            inputs:
-              command: 'download'
-              downloadDirectory: '$(System.DefaultWorkingDirectory)'
-              feedsToUse: 'internal'
-              vstsFeed: '4d568cd9-3258-4c66-8828-30f40b885ad4/fa3b70db-aad3-42de-a3b2-a6d319553542'
-              vstsFeedPackage: 'abb22cc3-69e3-448e-bcb0-4091eee52c00'
-              vstsPackageVersion: '0.0.1'
+          # - task: UniversalPackages@0
+          #   inputs:
+          #     command: 'download'
+          #     downloadDirectory: '$(System.DefaultWorkingDirectory)'
+          #     feedsToUse: 'internal'
+          #     vstsFeed: '4d568cd9-3258-4c66-8828-30f40b885ad4/fa3b70db-aad3-42de-a3b2-a6d319553542'
+          #     vstsFeedPackage: 'abb22cc3-69e3-448e-bcb0-4091eee52c00'
+          #     vstsPackageVersion: '*'
+
+          # - task: Ansible@0
+          #   inputs:
+          #     ansibleInterface: 'agentMachine'
+          #     playbookPathOnAgentMachine: '$(System.DefaultWorkingDirectory)/ansible/deploy.yaml'
+          #     inventoriesAgentMachine: 'noInventory'
   
 
             # - script: |
