--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -63,7 +63,7 @@ stages:
         rootFolderOrFile: '$(System.DefaultWorkingDirectory)/bootcamp-app'
         includeRootFolder: true
         archiveType: 'zip'
-        archiveFile: $(Build.ArtifactStagingDirectory)/bootcamp-app.zip'
+        archiveFile: $(Build.ArtifactStagingDirectory)/bootcamp-app.zip
         replaceExistingArchive: true
 
     # - task: PublishPipelineArtifact@1
