--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -92,21 +92,21 @@ stages:
 
 
 
-# - stage: CD_stage
-#   displayName: Stage
+- stage: CD_stage
+  displayName: Stage
   
-#   variables: 
-#   - group: vault secrets - stage
+  variables: 
+  - group: vault secrets - stage
 
-#   jobs:
-#   - job: deploy_stage
-#   - deployment: deploy
-#     displayName: Deploy stage
-#     environment: stage
-#     strategy:
-#       runOnce:
-#         deploy:
-#           steps:
+  jobs:
+  - job: deploy_stage
+  - deployment: deploy
+    displayName: Deploy stage
+    environment: stage
+    strategy:
+      runOnce:
+        deploy:
+          steps:
           # - task: UniversalPackages@0
           #   inputs:
           #     command: 'download'
@@ -116,11 +116,12 @@ stages:
           #     vstsFeedPackage: 'abb22cc3-69e3-448e-bcb0-4091eee52c00'
           #     vstsPackageVersion: '*'
 
-          # - task: Ansible@0
-          #   inputs:
-          #     ansibleInterface: 'agentMachine'
-          #     playbookPathOnAgentMachine: '$(System.DefaultWorkingDirectory)/ansible/deploy.yaml'
-          #     inventoriesAgentMachine: 'noInventory'
+          - task: Ansible@0
+            inputs:
+              ansibleInterface: 'agentMachine'
+              playbookPathOnAgentMachine: '$(System.DefaultWorkingDirectory)/ansible/deploy.yaml'
+              inventoriesAgentMachine: 'noInventory'
+              args: '-e "env=$(Environment.Name) admin_password=$(VM-password)"'
   
 
             # - script: |
