Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -99,9 +99,8 @@ stages:
   - group: vault secrets - stage
 
   jobs:
-  - job: deploy_stage
+  - job: deployStage
   - deployment: deploy
-    displayName: Deploy stage
     environment: stage
     strategy:
       runOnce:
