--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -109,7 +109,7 @@ stages:
           - task: UniversalPackages@0
             inputs:
               command: 'download'
-              downloadDirectory: '$(System.DefaultWorkingDirectory)'
+              downloadDirectory: '$(Build.ArtifactStagingDirectory)'
               feedsToUse: 'internal'
               vstsFeed: '4d568cd9-3258-4c66-8828-30f40b885ad4/fa3b70db-aad3-42de-a3b2-a6d319553542'
               vstsFeedPackage: 'abb22cc3-69e3-448e-bcb0-4091eee52c00'
