--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -115,12 +115,19 @@ stages:
               vstsFeedPackage: 'abb22cc3-69e3-448e-bcb0-4091eee52c00'
               vstsPackageVersion: '*'
 
-          # - task: Ansible@0
-          #   inputs:
-          #     ansibleInterface: 'agentMachine'
-          #     playbookPathOnAgentMachine: '$(System.DefaultWorkingDirectory)/Weight-tracker-ansible-pipeline/deploy.yaml'
-          #     inventoriesAgentMachine: 'noInventory'
-          #     args: '-e "env=$(Environment.Name) admin_password=$(VM-password)"'
+          - task: ExtractFiles@1
+            inputs:
+              archiveFilePatterns: 'bootcamp-app.zip'
+              destinationFolder: '$(System.DefaultWorkingDirectory)'
+              cleanDestinationFolder: false
+              overwriteExistingFiles: true
+              
+          - task: Ansible@0
+            inputs:
+              ansibleInterface: 'agentMachine'
+              playbookPathOnAgentMachine: '$(System.DefaultWorkingDirectory)/deploy.yaml'
+              inventoriesAgentMachine: 'noInventory'
+              args: '-e "env=$(Environment.Name) admin_password=$(VM-password)"'
   
 
             # - script: |
