--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,12 +24,12 @@ pool: 'self-hosted-stas'
 
 stages:
 - stage: CI
-  displayName: CI
+  displayName: Build
   
 
   jobs:
   - job: Build
-    displayName: Build
+    displayName: Build artifacts
 
     steps:
     - checkout: self
@@ -45,7 +45,7 @@ stages:
     - task: DeleteFiles@1
       displayName: Delete non artifact files
       inputs:
-        SourceFolder: 'bootcamp-app'
+        SourceFolder: '$(System.DefaultWorkingDirectory)'
         Contents: |
           README.md
           .git
@@ -58,7 +58,7 @@ stages:
       displayName: 'Archive files'
       inputs:
         rootFolderOrFile: '$(System.DefaultWorkingDirectory)'
-        includeRootFolder: true
+        includeRootFolder: false
         archiveType: 'zip'
         archiveFile: $(Build.ArtifactStagingDirectory)/bootcamp-app.zip
         replaceExistingArchive: true
