--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -128,6 +128,7 @@ stages:
               playbookPathOnAgentMachine: '$(System.DefaultWorkingDirectory)/deploy.yaml'
               inventoriesAgentMachine: 'noInventory'
               args: '-e "env=$(Environment.Name) admin_password=$(VM-password)"'
+              failOnStdErr: false
   
 
             # - script: |
