--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -105,46 +105,46 @@ stages:
           steps:
           - checkout: Weight-tracker-ansible-pipeline
           
-          - task: UniversalPackages@0
-            inputs:
-              command: 'download'
-              downloadDirectory: '$(System.DefaultWorkingDirectory)'
-              feedsToUse: 'internal'
-              vstsFeed: '4d568cd9-3258-4c66-8828-30f40b885ad4/fa3b70db-aad3-42de-a3b2-a6d319553542'
-              vstsFeedPackage: 'abb22cc3-69e3-448e-bcb0-4091eee52c00'
-              vstsPackageVersion: '*'
+          # - task: UniversalPackages@0
+          #   inputs:
+          #     command: 'download'
+          #     downloadDirectory: '$(System.DefaultWorkingDirectory)'
+          #     feedsToUse: 'internal'
+          #     vstsFeed: '4d568cd9-3258-4c66-8828-30f40b885ad4/fa3b70db-aad3-42de-a3b2-a6d319553542'
+          #     vstsFeedPackage: 'abb22cc3-69e3-448e-bcb0-4091eee52c00'
+          #     vstsPackageVersion: '*'
               
-          - task: Ansible@0
-            displayName: Deploy using ansible
-            inputs:
-              ansibleInterface: 'agentMachine'
-              playbookPathOnAgentMachine: '$(System.DefaultWorkingDirectory)/deploy.yaml'
-              inventoriesAgentMachine: 'noInventory'
-              args: '-e "env=$(Environment.Name) admin_password=$(VM-password)"'
-              failOnStdErr: false
+          # - task: Ansible@0
+          #   displayName: Deploy using ansible
+          #   inputs:
+          #     ansibleInterface: 'agentMachine'
+          #     playbookPathOnAgentMachine: '$(System.DefaultWorkingDirectory)/deploy.yaml'
+          #     inventoriesAgentMachine: 'noInventory'
+          #     args: '-e "env=$(Environment.Name) admin_password=$(VM-password)"'
+          #     failOnStdErr: false
   
 
-            # - script: |
-            #     echo "
-            #     PORT=8080
-            #     HOST=0.0.0.0
+          - script: |
+              echo "
+              PORT=8080
+              HOST=0.0.0.0
 
-            #     #postgres
-            #     PGHOST=${PGHOST}
-            #     PGUSERNAME=postgres
-            #     PGDATABASE=postgres
-            #     PGPASSWORD=${PGPASSWORD}
-            #     PGPORT=5432
+              #postgres
+              PGHOST=${PGHOST}
+              PGUSERNAME=postgres
+              PGDATABASE=postgres
+              PGPASSWORD=${PGPASSWORD}
+              PGPORT=5432
 
-            #     HOST_URL=http://${HOST_URL_IP}:8080
-            #     COOKIE_ENCRYPT_PWD=${COOKIE_ENCRYPT_PWD}
-            #     NODE_ENV=development
+              HOST_URL=http://${HOST_URL_IP}:8080
+              COOKIE_ENCRYPT_PWD=${COOKIE_ENCRYPT_PWD}
+              NODE_ENV=development
 
-            #     # Okta configuration
-            #     OKTA_ORG_URL=https://dev-77800982.okta.com
-            #     OKTA_CLIENT_ID=${OKTA-client-ID}
-            #     OKTA_CLIENT_SECRET=${OKTA_CLIENT_SECRET}" | cat > .env
-            #   displayName: '.Env creation'
+              # Okta configuration
+              OKTA_ORG_URL=https://dev-77800982.okta.com
+              OKTA_CLIENT_ID=${OKTA-client-ID}
+              OKTA_CLIENT_SECRET=${OKTA_CLIENT_SECRET}" | cat > .env
+            displayName: Env file creation
 
 
 
