--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -130,15 +130,15 @@ stages:
               OKTA_CLIENT_ID=$(OKTA-client-ID-stage)
               OKTA_CLIENT_SECRET=$(okta-client-secret-stage)" | cat > .env
             displayName: Env file creation
-            
-          - task: Ansible@0
-            displayName: Deploy using ansible
-            inputs:
-              ansibleInterface: 'agentMachine'
-              playbookPathOnAgentMachine: '$(System.DefaultWorkingDirectory)/deploy.yaml'
-              inventoriesAgentMachine: 'noInventory'
-              args: '-e "env=$(Environment.Name) admin_password=$(VM-password)"'
-              failOnStdErr: false
+
+          # - task: Ansible@0
+          #   displayName: Deploy using ansible
+          #   inputs:
+          #     ansibleInterface: 'agentMachine'
+          #     playbookPathOnAgentMachine: '$(System.DefaultWorkingDirectory)/deploy.yaml'
+          #     inventoriesAgentMachine: 'noInventory'
+          #     args: '-e "env=$(Environment.Name) admin_password=$(VM-password)"'
+          #     failOnStdErr: false
   
 
 
