--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,7 +26,6 @@ stages:
 - stage: CI
   displayName: Build
   
-
   jobs:
   - job: Build
     displayName: Build artifacts
@@ -40,8 +39,6 @@ stages:
       inputs:
         cwd: '$(System.DefaultWorkingDirectory)'
         command: 'install'
-
-    # - script: export ANSIBLE_HOST_KEY_CHECKING=False ""
       
     - task: DeleteFiles@1
       displayName: Delete non artifact files
@@ -99,18 +96,18 @@ stages:
       runOnce:
         deploy:
           steps:
-          # - checkout: Weight-tracker-ansible-pipeline
-          #   displayName: Clone latest ansible repo
+          - checkout: Weight-tracker-ansible-pipeline
+            displayName: Clone latest ansible repo
           
-          # - task: UniversalPackages@0
-          #   displayName: Download latest artifacts
-          #   inputs:
-          #     command: 'download'
-          #     downloadDirectory: '$(System.DefaultWorkingDirectory)'
-          #     feedsToUse: 'internal'
-          #     vstsFeed: '4d568cd9-3258-4c66-8828-30f40b885ad4/fa3b70db-aad3-42de-a3b2-a6d319553542'
-          #     vstsFeedPackage: 'abb22cc3-69e3-448e-bcb0-4091eee52c00'
-          #     vstsPackageVersion: '*'
+          - task: UniversalPackages@0
+            displayName: Download latest artifacts
+            inputs:
+              command: 'download'
+              downloadDirectory: '$(System.DefaultWorkingDirectory)'
+              feedsToUse: 'internal'
+              vstsFeed: '4d568cd9-3258-4c66-8828-30f40b885ad4/fa3b70db-aad3-42de-a3b2-a6d319553542'
+              vstsFeedPackage: 'abb22cc3-69e3-448e-bcb0-4091eee52c00'
+              vstsPackageVersion: '*'
 
           - script: |
               echo "
@@ -132,20 +129,23 @@ stages:
               OKTA_ORG_URL=https://dev-77800982.okta.com
               OKTA_CLIENT_ID=$(OKTA-client-ID-stage)
               OKTA_CLIENT_SECRET=$(okta-client-secret-stage)" | cat > .env
-            displayName: Env file creation
-            
+            displayName: Crate .env file
 
-          - script: |
-              echo "$(OKTA-client-ID-stage) + $(okta-client-secret-stage)" | cat > text.txt
 
-          # - task: Ansible@0
-          #   displayName: Deploy using ansible
-          #   inputs:
-          #     ansibleInterface: 'agentMachine'
-          #     playbookPathOnAgentMachine: '$(System.DefaultWorkingDirectory)/deploy.yaml'
-          #     inventoriesAgentMachine: 'noInventory'
-          #     args: '-e "env=$(Environment.Name) admin_password=$(VM-password)"'
-          #     failOnStdErr: false
+          - task: Ansible@0
+            displayName: Deploy using ansible
+            inputs:
+              ansibleInterface: 'agentMachine'
+              playbookPathOnAgentMachine: '$(System.DefaultWorkingDirectory)/deploy.yaml'
+              inventoriesAgentMachine: 'noInventory'
+              args: '-e "env=$(Environment.Name) admin_password=$(VM-password)"'
+              failOnStdErr: false
+
+          - task: DeleteFiles@1
+            displayName: Delete .env file
+            inputs:
+              SourceFolder: '$(System.DefaultWorkingDirectory)'
+              Contents: '.env'
   
 
 
