--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -40,17 +40,17 @@ stages:
         cwd: '$(System.DefaultWorkingDirectory)'
         command: 'install'
       
-    - task: DeleteFiles@1
-      displayName: Delete non artifact files
-      inputs:
-        SourceFolder: '$(System.DefaultWorkingDirectory)'
-        Contents: |
-          README.md
-          .git
-          docs
-          .gitignore
-          LICENSE
-          azure-pipelines.yml
+    # - task: DeleteFiles@1
+    #   displayName: Delete non artifact files
+    #   inputs:
+    #     SourceFolder: '$(System.DefaultWorkingDirectory)'
+    #     Contents: |
+    #       README.md
+    #       .git
+    #       docs
+    #       .gitignore
+    #       LICENSE
+    #       azure-pipelines.yml
           
     - task: ArchiveFiles@2
       displayName: Archive files
