--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -39,6 +39,12 @@ stages:
       inputs:
         cwd: '$(System.DefaultWorkingDirectory)'
         command: 'install'
+
+    - task: Npm@0
+      displayName: 'npm install'
+      inputs:
+        cwd: '$(System.DefaultWorkingDirectory)'
+        command: 'npm install -save-dev nodemon@2'
       
     # - task: DeleteFiles@1
     #   displayName: Delete non artifact files
