--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -45,7 +45,7 @@ stages:
       inputs:
         cwd: '$(System.DefaultWorkingDirectory)'
         command: 'install'
-        arguments: '-save-dev nodemon@2'
+        # arguments: '-save-dev nodemon@2'
       
     # - task: DeleteFiles@1
     #   displayName: Delete non artifact files
@@ -59,15 +59,21 @@ stages:
     #       LICENSE
     #       azure-pipelines.yml
           
-    - task: ArchiveFiles@2
-      displayName: Archive files
+    # - task: ArchiveFiles@2
+    #   displayName: Archive files
+    #   inputs:
+    #     rootFolderOrFile: '$(System.DefaultWorkingDirectory)'
+    #     includeRootFolder: false
+    #     archiveType: 'zip'
+    #     archiveFile: '$(Build.ArtifactStagingDirectory)/bootcamp-app.zip'
+    #     replaceExistingArchive: true
+    #     sevenZipCompression: none
+    - task: CopyFiles@2
       inputs:
-        rootFolderOrFile: '$(System.DefaultWorkingDirectory)'
-        includeRootFolder: false
-        archiveType: 'zip'
-        archiveFile: '$(Build.ArtifactStagingDirectory)/bootcamp-app.zip'
-        replaceExistingArchive: true
-        sevenZipCompression: none
+        SourceFolder: '''$(System.DefaultWorkingDirectory)'''
+        Contents: '**'
+        TargetFolder: '''$(Build.ArtifactStagingDirectory)'''
+        CleanTargetFolder: true
 
     # - task: PublishPipelineArtifact@1
     #   displayName: Publish artifacts
