Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -70,9 +70,9 @@ stages:
     #     sevenZipCompression: none
     - task: CopyFiles@2
       inputs:
-        SourceFolder: '''$(System.DefaultWorkingDirectory)'''
+        SourceFolder: '$(System.DefaultWorkingDirectory)'
         Contents: '**'
-        TargetFolder: '''$(Build.ArtifactStagingDirectory)'''
+        TargetFolder: '$(Build.ArtifactStagingDirectory)'
         CleanTargetFolder: true
 
     # - task: PublishPipelineArtifact@1
