--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -34,46 +34,46 @@ stages:
     - checkout: self
       displayName: Clone latest web-application repo
 
-    # - task: Npm@0
-    #   displayName: 'npm install'
-    #   inputs:
-    #     cwd: '$(System.DefaultWorkingDirectory)'
-    #     command: 'install'
-
     - task: Npm@0
       displayName: 'npm install'
       inputs:
         cwd: '$(System.DefaultWorkingDirectory)'
         command: 'install'
-        # arguments: '-save-dev nodemon@2'
+
+    # - task: Npm@0
+    #   displayName: 'npm install'
+    #   inputs:
+    #     cwd: '$(System.DefaultWorkingDirectory)'
+    #     command: 'install'
+    #     # arguments: '-save-dev nodemon@2'
       
-    # - task: DeleteFiles@1
-    #   displayName: Delete non artifact files
-    #   inputs:
-    #     SourceFolder: '$(System.DefaultWorkingDirectory)'
-    #     Contents: |
-    #       README.md
-    #       .git
-    #       docs
-    #       .gitignore
-    #       LICENSE
-    #       azure-pipelines.yml
-          
-    # - task: ArchiveFiles@2
-    #   displayName: Archive files
-    #   inputs:
-    #     rootFolderOrFile: '$(System.DefaultWorkingDirectory)'
-    #     includeRootFolder: false
-    #     archiveType: 'zip'
-    #     archiveFile: '$(Build.ArtifactStagingDirectory)/bootcamp-app.zip'
-    #     replaceExistingArchive: true
-    #     sevenZipCompression: none
-    - task: CopyFiles@2
+    - task: DeleteFiles@1
+      displayName: Delete non artifact files
       inputs:
-        SourceFolder: '$(Build.SourcesDirectory)'
-        Contents: '**'
-        TargetFolder: '$(Build.ArtifactStagingDirectory)'
-        CleanTargetFolder: true
+        SourceFolder: '$(System.DefaultWorkingDirectory)'
+        Contents: |
+          README.md
+          .git
+          docs
+          .gitignore
+          LICENSE
+          azure-pipelines.yml
+          
+    - task: ArchiveFiles@2
+      displayName: Archive files
+      inputs:
+        rootFolderOrFile: '$(System.DefaultWorkingDirectory)'
+        includeRootFolder: false
+        archiveType: 'zip'
+        archiveFile: '$(Build.ArtifactStagingDirectory)/bootcamp-app.zip'
+        replaceExistingArchive: true
+        
+    # - task: CopyFiles@2
+    #   inputs:
+    #     SourceFolder: '$(Build.SourcesDirectory)'
+    #     Contents: '**'
+    #     TargetFolder: '$(Build.ArtifactStagingDirectory)'
+    #     CleanTargetFolder: true
 
     # - task: PublishPipelineArtifact@1
     #   displayName: Publish artifacts
@@ -146,14 +146,14 @@ stages:
             displayName: Crate .env file
 
 
-          # - task: Ansible@0
-          #   displayName: Deploy using ansible
-          #   inputs:
-          #     ansibleInterface: 'agentMachine'
-          #     playbookPathOnAgentMachine: '$(System.DefaultWorkingDirectory)/deploy.yaml'
-          #     inventoriesAgentMachine: 'noInventory'
-          #     args: '-e "env=$(Environment.Name) admin_password=$(VM-password)"'
-          #     failOnStdErr: false
+          - task: Ansible@0
+            displayName: Deploy using ansible
+            inputs:
+              ansibleInterface: 'agentMachine'
+              playbookPathOnAgentMachine: '$(System.DefaultWorkingDirectory)/deploy.yaml'
+              inventoriesAgentMachine: 'noInventory'
+              args: '-e "env=$(Environment.Name) admin_password=$(VM-password)"'
+              failOnStdErr: false
 
           # - task: DeleteFiles@1
           #   displayName: Delete .env file
