Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -68,7 +68,7 @@ stages:
 
 
 
-- stage: CD_stage
+- stage: Stage Deployment
   displayName: Stage
   
   variables: 
@@ -139,7 +139,7 @@ stages:
 
 
 
-- stage: CD_stage
+- stage: Prod Deployment
   displayName: Prod
   
   variables: 
