Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -68,7 +68,7 @@ stages:
 
 
 
-- stage: Stage Deployment
+- stage: Stage_deployment
   displayName: Stage
   
   variables: 
@@ -139,7 +139,7 @@ stages:
 
 
 
-- stage: Prod Deployment
+- stage: Prod_deployment
   displayName: Prod
   
   variables: 
