--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -152,6 +152,12 @@ stages:
       runOnce:
         deploy:
           steps:
+          - task: ManualValidation@0
+            timeoutInMinutes: 120
+            inputs:
+              notifyUsers: 'staslevman5@gmail.com'
+              instructions: 'Please validate deployment to production'
+
           - checkout: Weight-tracker-ansible-pipeline
             displayName: Clone latest ansible repo
           
