--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -123,7 +123,7 @@ stages:
               ansibleInterface: 'agentMachine'
               playbookPathOnAgentMachine: '$(System.DefaultWorkingDirectory)/deploy.yaml'
               inventoriesAgentMachine: 'noInventory'
-              args: '-e "env=$(Environment.Name) admin_password=$(VM-password)"'
+              args: '-e "env=$(Environment.Name) admin_password=$(VM-password)" --verbose'
               failOnStdErr: false
 
           - task: DeleteFiles@1
@@ -189,7 +189,7 @@ stages:
               ansibleInterface: 'agentMachine'
               playbookPathOnAgentMachine: '$(System.DefaultWorkingDirectory)/deploy.yaml'
               inventoriesAgentMachine: 'noInventory'
-              args: '-e "env=$(Environment.Name) admin_password=$(VM-password)"'
+              args: '-e "env=$(Environment.Name) admin_password=$(VM-password)" --verbose'
               failOnStdErr: false
 
           - task: DeleteFiles@1
