Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -142,7 +142,7 @@ stages:
 
   jobs:
   - deployment: Deploy
-    environment: stage
+    environment: prod
     strategy:
       runOnce:
         deploy:
