--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -178,8 +178,8 @@ stages:
 
               # Okta configuration
               OKTA_ORG_URL=https://dev-77800982.okta.com
-              OKTA_CLIENT_ID=$(OKTA-client-ID-stage)
-              OKTA_CLIENT_SECRET=$(okta-client-secret-stage)" | cat > .env
+              OKTA_CLIENT_ID=$(OKTA-client-ID-$(Environment.Name))
+              OKTA_CLIENT_SECRET=$(okta-client-secret-$(Environment.Name))" | cat > .env
             displayName: Crate .env file
 
 
