Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -119,6 +119,8 @@ stages:
 
           - task: Ansible@0
             displayName: Deploy using ansible
+            retryCountOnTaskFailure: 5
+            timeoutInMinutes: 5 
             inputs:
               ansibleInterface: 'agentMachine'
               playbookPathOnAgentMachine: '$(System.DefaultWorkingDirectory)/deploy.yaml'
@@ -185,6 +187,8 @@ stages:
 
           - task: Ansible@0
             displayName: Deploy using ansible
+            retryCountOnTaskFailure: 5
+            timeoutInMinutes: 5 
             inputs:
               ansibleInterface: 'agentMachine'
               playbookPathOnAgentMachine: '$(System.DefaultWorkingDirectory)/deploy.yaml'
@@ -197,3 +201,7 @@ stages:
             inputs:
               SourceFolder: '$(System.DefaultWorkingDirectory)'
               Contents: '.env'
+              
+
+
+              
