Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,6 +12,7 @@ resources:
     type: github
     name: sincros121/bootcamp-app
     endpoint: sincros121
+    ref: master
     trigger:
       batch: true
       branches:
