--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,7 +11,7 @@ resources:
   - repository: bootcamp-app      
     type: github
     name: sincros121/bootcamp-app
-    endpoint: sincros121
+    # endpoint: sincros121
     ref: master
     trigger:
       batch: true
@@ -19,6 +19,7 @@ resources:
         include:
         - master
 
+trigger: azure-pipelines.yml
 
 pool: 'self-hosted-stas'
 
