Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,7 +19,7 @@ resources:
         include:
         - master
 
-trigger: azure-pipelines.yml
+trigger: azure-pipelines
 
 pool: 'self-hosted-stas'
 
