--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,7 +11,7 @@ resources:
   - repository: bootcamp-app      
     type: github
     name: sincros121/bootcamp-app
-    # endpoint: sincros121
+    endpoint: sincros121
     ref: master
     trigger:
       batch: true
