Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,8 +19,8 @@ resources:
         include:
         - master
 
-trigger: 
-- azure-pipelines
+# trigger: 
+# - azure-pipelines
 
 pool: 'self-hosted-stas'
 
