Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,7 +17,7 @@ resources:
       batch: true
       branches:
         include:
-        - azure-pipelines
+        - master
 
 # trigger: 
 # - master
